2010-03-03 Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am:
	($(PLUGIN_BUILD_DIR)/%.o): Remove unnecessary cd.
	($(PLUGIN_BUILD_DIR)/IcedTeaPlugin.o): Create
	build directory.

2010-03-03 Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am:
	(PLUGIN_BUILD_DIR): Name the build directory
	differently so it doesn't conflict when
	srcdir==builddir.
	(clean-IcedTeaNPPlugin): Avoid needless use
	of cd by using absolute paths.
	(clean-IcedTeaPlugin): Explicitly name files
	as in clean-IcedTeaNPPlugin.
	(clean-plugin): Remove the plugin build directory
	using rmdir.  This will fail if anything unexpected
	is left in the build directory.

2010-03-02 Andrew John Hughes  <ahughes@redhat.com>

	* patches/boot/genstubs-nofork.patch:
	Add missing patch.  This causes the
	genstubs Ant task to not fork a new process.
	Doing so with gcj causes the build to hang.

2010-03-02 Andrew John Hughes  <ahughes@redhat.com>

	* patches/icedtea-cc-interp-backedge.patch,
	* patches/icedtea-ia64-bugfix.patch,
	* patches/icedtea-nss-6763530.patch,
	* patches/icedtea-test-atomic-operations.patch:
	Dropped, applied upstream.
	* Makefile.am:
	Bump to b84 with updated changesets and JAXP
	URL (m5->m6).
	(ICEDTEA_RT): Set to main rt.jar not rt-closed.jar.
	(JDK_SHARE): Use openjdk-boot for building bootstrap classes.
	(JDK_SOLARIS): Likewise.
	(LANGTOOLS): Likewise.
	(CORBA): Likewise.
	(ICEDTEA_BOOTSTRAP_RESOURCES): Include javac resources in
	bootstrap.
	(PLUGIN_DIR): Removed.
	(PLUGIN_SRCDIR): Common source directory variable for both plugins.
	(PLUGIN_BUILD_DIR): Likewise for build directory.
	(ICEDTEAPLUGIN_TARGET): Updated to include full path.
	(OPENJDK_TREE): Target for obtaining a patched OpenJDK tree.
	(OPENJDK_BOOT_TREE): Likewise for openjdk-boot.
	(ICEDTEA_PATCHES): Remove dead patches.
	(ICEDTEA_BOOT_PATCHES): Add diamond patch if needed.
	(stamps/extract-jaxws.stamp): Depend on drops being downloaded
	as well.
	(stamps/icedtea.stamp): Use OPENJDK_TREE rather than overlay.