@@ -121,7 +121,7 @@ diff -r 945bf7540697 src/share/vm/utilities/dtrace.hpp
 +#endif
 --- openjdk/hotspot/src/share/vm/runtime/arguments.cpp	2009-03-04 14:39:43.000000000 +0100
 +++ openjdk/hotspot/src/share/vm/runtime/arguments.cpp	2009-03-04 22:11:37.000000000 +0100
-@@ -2272,16 +2272,16 @@
+@@ -2375,16 +2375,16 @@
        FLAG_SET_CMDLINE(bool, DisplayVMOutputToStderr, false);
        FLAG_SET_CMDLINE(bool, DisplayVMOutputToStdout, true);
      } else if (match_option(option, "-XX:+ExtendedDTraceProbes", &tail)) {
@@ -139,6 +139,6 @@ diff -r 945bf7540697 src/share/vm/utilities/dtrace.hpp
        return JNI_EINVAL;
 -#endif // ndef SOLARIS
 +#endif // ndef DTRACE_ENABLED
-     } else
  #ifdef ASSERT
-     if (match_option(option, "-XX:+FullGCALot", &tail)) {
+     } else if (match_option(option, "-XX:+FullGCALot", &tail)) {
+       FLAG_SET_CMDLINE(bool, FullGCALot, true);
